--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.uwetrottmann.trakt5</groupId>
-    <artifactId>trakt-kotlin</artifactId>
+    <artifactId>trakt-java</artifactId>
     <packaging>jar</packaging>
     <version>6.1.2</version>
 
