--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.5.0'
     compile 'com.squareup.retrofit2:converter-gson:2.5.0'
     compile 'org.threeten:threetenbp:1.3.7'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.30"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.11.1'
@@ -29,9 +29,9 @@ dependencies {
 }
 
 group = 'com.szoldapps.trakt'
-version = '6.2.3'
+version = '6.2.4'
 description = 'trakt-kotlin'
-sourceCompatibility = '1.8'
+sourceCompatibility = 1.8
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -42,8 +42,9 @@ sourceSets {
     test.java.srcDirs += 'src/test/java/'
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.szoldapps.trakt.TraktV2'
-    }
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
