--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ group = 'com.szoldapps.trakt'
 version = '6.2.4'
 description = 'trakt-kotlin'
 sourceCompatibility = 1.8
+artifacts {
+    jar
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
